fix: resolve CORS wildcard bug and remove duplicate CORS config